# FastAPI-Project

./: README.md  pyproject.toml
.cursor/rules/: project-structure.mdc
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routers/: auth.py  ml_model.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: prediction.py  user.py
app/schemas/: ml.py  user.py
app/services/: ml_service.py
